--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,9 @@
     <module>dmtf</module>
     <module>cdmi</module>
     <module>cloudsigma2</module>
+    <module>cloudsigma2-hnl</module>
     <module>cloudsigma2-lvs</module>
+    <module>cloudsigma2-sjc</module>
     <module>cloudsigma2-wdc</module>
     <module>cloudsigma2-zrh</module>
     <module>digitalocean</module>
