--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
     <module>cdmi</module>
     <module>cloudsigma2</module>
     <module>cloudsigma2-lvs</module>
+    <module>cloudsigma2-sjc</module>
     <module>cloudsigma2-wdc</module>
     <module>cloudsigma2-zrh</module>
     <module>digitalocean</module>
