--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
     <module>dmtf</module>
     <module>cdmi</module>
     <module>cloudsigma2</module>
+    <module>cloudsigma2-hnl</module>
     <module>cloudsigma2-lvs</module>
     <module>cloudsigma2-sjc</module>
     <module>cloudsigma2-wdc</module>
